# Voice-Control-ROS

./: CMakeLists.txt  LICENSE  README.md  install.sh  mymap1.pgm  mymap1.yaml  package.xml  requirements.txt
config/: params.yaml
launch/: remap.launch  voice.launch  voixmap.launch
scripts/: mic_client.py  nav_v1.py
